Fix modal alignment

--- a/lisk-dex-electron/src/SignInModal.css
+++ b/lisk-dex-electron/src/SignInModal.css
@@ -1,7 +1,7 @@
 #sign-in-modal {
     position: absolute;
     z-index: 2;
-    top: calc(50% - 295px);
+    top: calc(50% - 316px);
     left: 25%;
     width: 50%;
     padding: 40px;
